--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -114,6 +114,17 @@
             </intent-filter>
         </activity>
 
+        <!-- Wearable Message Listener Service -->
+        <service
+            android:name=".presentation.WearableMessageListenerService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*"
+                    android:pathPrefix="/fitguard/activity" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
